--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+!src/main/**/build/
+!src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -11,8 +11,8 @@
 .springBeans
 .sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+!src/main/**/bin/
+!src/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -20,8 +20,8 @@ bin/
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+!src/main/**/out/
+!src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
