--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,12 +7,9 @@ jobs:
     name: Test & Build
     runs-on: ubuntu-latest
     outputs:
-      previous_package_version: ${{ steps.check_version.previous-version }}
-      package_version: ${{ steps.check_version.current-version }}
+      package_version: ${{ steps.expose_version.package_version }}
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
 
       - name: Set up JDK 14
         uses: actions/setup-java@v1
@@ -34,24 +31,18 @@ jobs:
           name: jar-artifact
           path: build/libs/*.jar
 
-      - uses: salsify/action-detect-and-tag-new-version@v2
-        name: Expose version changes
-        id: check-version
-        with:
-          version-command: ./gradlew -q version
-          create-tag: false
+      - name: Expose build version
+        id: expose_version
+        run:
+          - echo ./gradlew -q version >> $package_version
+          - echo "::set-output name=package_version::$package_version"
 
   create-release:
     name: Release new version
     runs-on: ubuntu-latest
     needs: build
-    if: needs.build.output.previous_package_version != needs.build.output.package_version
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: jar-artifact
 
       - name: Create Release
         id: create-release
@@ -59,13 +50,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.check_version.current-version }}
-          release_name: Release ${{ steps.check_version.current-version }}
+          tag_name: ${{ needs.build.output.package_version }}
+          release_name: Release ${{ needs.build.output.package_version }}
           body: |
             Changes in this Release
             - ...
           draft: true
           prerelease: false
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: jar-artifact
 
       - name: Upload Release Asset
         id: upload-release-asset
