--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Expose build version
         id: expose_version
         run: |
-          echo ./gradlew -q version >> $package_version
+          package_version=$(./gradlew -q version)
           echo "::set-output name=package_version::$package_version"
 
   create-release:
