--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,12 +41,13 @@ jobs:
   create-release:
     name: Release new version
     runs-on: ubuntu-latest
+    continue-on-error: true
     needs: build
     steps:
       - uses: actions/checkout@v2
 
       - name: Create Release
-        id: create-release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -66,6 +67,8 @@ jobs:
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
+        continue-on-error: true
+        if: ${{ steps.create_release.outputs.upload_url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
