--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,7 @@ jobs:
           echo "::set-output name=package_version::$package_version"
 
   create-release:
-    name: Release new version
+    name: Release version
     runs-on: ubuntu-latest
     continue-on-error: true
     needs: build
@@ -53,7 +53,7 @@ jobs:
         id: tagged
         run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ needs.build.outputs.package_version }}" && echo "::set-output name=tagged::0" || echo "::set-output name=tagged::1"
 
-      - name: Create Release
+      - name: Create Release v${{ needs.build.outputs.package_version }}
         id: create_release
         uses: actions/create-release@v1
         if: steps.tagged.outputs.tagged == 1
@@ -69,10 +69,11 @@ jobs:
           prerelease: false
 
       - uses: actions/download-artifact@v2
+        if: steps.tagged.outputs.tagged == 1
         with:
           name: jar-artifact
 
-      - name: Upload Release Asset
+      - name: Upload Release Asset to v${{ needs.build.outputs.package_version }}
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         continue-on-error: true
