--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,8 +28,8 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: jar-artifact
-          path: build/libs/*.jar
+          name: build-output
+          path: build
 
       - name: Expose build version
         id: expose_version
@@ -38,11 +38,11 @@ jobs:
           echo $package_version
           echo "::set-output name=package_version::$package_version"
 
-  create-release:
-    name: Release version
-    runs-on: ubuntu-latest
-    continue-on-error: true
+  check_should_release:
+    name: Check should release
     needs: build
+    outputs:
+      should_release: ${{ steps.tagged.outputs.should_release }}
     steps:
       - uses: actions/checkout@v2
 
@@ -51,12 +51,20 @@ jobs:
 
       - name: 'Check: Tag v${{ needs.build.outputs.package_version }} exists'
         id: tagged
-        run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ needs.build.outputs.package_version }}" && echo "::set-output name=tagged::0" || echo "::set-output name=tagged::1"
+        run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ needs.build.outputs.package_version }}" && echo "::set-output name=should_release::0" || echo "::set-output name=should_release::1"
+
+  release:
+    name: Release version
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    needs: check_should_release
+    if: needs.check_should_release.outputs.should_release == 1
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Create Release v${{ needs.build.outputs.package_version }}
         id: create_release
         uses: actions/create-release@v1
-        if: steps.tagged.outputs.tagged == 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -69,19 +77,38 @@ jobs:
           prerelease: false
 
       - uses: actions/download-artifact@v2
-        if: steps.tagged.outputs.tagged == 1
         with:
-          name: jar-artifact
+          name: build-output
 
       - name: Upload Release Asset to v${{ needs.build.outputs.package_version }}
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         continue-on-error: true
-        if: steps.tagged.outputs.tagged == 1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./reactor-validations-${{ needs.build.outputs.package_version }}.jar
+          asset_path: ./libs/reactor-validations-${{ needs.build.outputs.package_version }}.jar
           asset_name: reactor-validations-${{ needs.build.outputs.package_version }}.jar
           asset_content_type: application/java-archive
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: release
+    if: needs.check_should_release.outputs.should_release == 1
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 14
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: build-output
+
+      - name: Publish package
+        run: gradle publish
+        env:
+          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
