--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,6 +40,7 @@ jobs:
 
   check_should_release:
     name: Check should release
+    runs-on: ubuntu-latest
     needs: build
     outputs:
       should_release: ${{ steps.tagged.outputs.should_release }}
@@ -56,7 +57,6 @@ jobs:
   release:
     name: Release version
     runs-on: ubuntu-latest
-    continue-on-error: true
     needs: check_should_release
     if: needs.check_should_release.outputs.should_release == 1
     steps:
@@ -94,7 +94,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: release
+    needs: check_should_release
     if: needs.check_should_release.outputs.should_release == 1
     steps:
       - uses: actions/checkout@v2
