--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,8 +38,8 @@ jobs:
           echo $package_version
           echo "::set-output name=package_version::$package_version"
 
-  check_should_release:
-    name: Check should release
+  release_check:
+    name: Check should create release
     runs-on: ubuntu-latest
     needs: build
     outputs:
@@ -55,10 +55,10 @@ jobs:
         run: git show-ref --tags --verify --quiet -- "refs/tags/v${{ needs.build.outputs.package_version }}" && echo "::set-output name=should_release::0" || echo "::set-output name=should_release::1"
 
   release:
-    name: Release version
+    name: Create Github release
     runs-on: ubuntu-latest
-    needs: [build, check_should_release]
-    if: needs.check_should_release.outputs.should_release == 1
+    needs: [build, release_check]
+    if: needs.release_check.outputs.should_release == 1
     steps:
       - uses: actions/checkout@v2
 
@@ -93,9 +93,10 @@ jobs:
           asset_content_type: application/java-archive
 
   publish:
+    name: Publish to Github Packages
     runs-on: ubuntu-latest
-    needs: check_should_release
-    if: needs.check_should_release.outputs.should_release == 1
+    needs: release_check
+    if: needs.release_check.outputs.should_release == 1
     steps:
       - uses: actions/checkout@v2
 
